# File-Downloader

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  MTFD.cpp  MTFD.h  README.md  main.cpp  pch.h
